--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "chart.js": "^3.9.1",
-        "flowbite": "^1.5.1"
+        "flowbite": "^1.5.1",
+        "html-to-image": "^1.10.4",
+        "jspdf": "^2.5.1"
     }
 }
